feat(business-manager): align Business Manager and SHARED components with refactored architecture